--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9390811923860968"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title> Rohit Maurya</title>
