Update index.html final

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-<!--       <img href="/index.html" src="/assets/image/RM.svg" class="img-fluid " alt="" srcset="" width="60px"> -->
+      <img href="/index.html" src="/assets/image/RM.svg" class="img-fluid " alt="" srcset="" width="60px">  
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <!-- <span class="navbar-toggler-icon"></span> -->
